root: Check if userdata is f2fs and copy in the right fstab
Change-Id: I6c917a08b2ef726528c5f19205d54f95f756ad14

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -35,6 +35,10 @@ on early-init
     # Create PDS mount point
     mkdir /pds 0755 root root
 
+on init
+    chmod 755 /f2fscheck.sh
+    exec /f2fscheck.sh
+
 on early-boot
 # Define Motorola DBVC ATVC Property defaults (failsafe properties)
     setprop ro.sys.atvc_allow_netmon_usb 0
