Add missing bugreport service CYAN-4474
Change-Id: I08a0caa020e27d08de598f0dfa99b251941f1c74

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -565,3 +565,10 @@ on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
     restart adbd
     write /sys/class/android_usb/android0/enable 1
+
+# bugreport
+service bugreport /system/bin/dumpstate -d -p -B \
+        -o /data/data/com.android.shell/files/bugreports/bugreport
+    class main
+    disabled
+    oneshot
