--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -98,6 +98,7 @@ on property:ro.modem.no_wdog_chk=1
 
 on fs
     mount_all /fstab.qcom
+    swapon_all fstab.qcom
     restorecon /persist
     restorecon /persist/.bt_nv.bin
     restorecon /persist/WCNSS_qcom_wlan_nv.bin
