Initial device specific sepolicy
Change-Id: I77b80e32eb6826ac537dd4146679cebd0013813e

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -98,13 +98,7 @@ on property:ro.modem.no_wdog_chk=1
 
 on fs
     mount_all /fstab.qcom
-    restorecon /persist
-    restorecon /persist/.bt_nv.bin
-    restorecon /persist/WCNSS_qcom_wlan_nv.bin
-    restorecon /persist/drm/widevine
-    restorecon /persist/drm/widevine/5dsokxEEDXgQhkN50bp-Z2K5InM_
-    restorecon /persist/drm/widevine/5dsokxEEDXgQhkN50bp-Z2K5InM_/RXFABDUxyT6Q+Zwx9ZhPGOq2Bq8_
-    restorecon /persist/drm/widevine/5dsokxEEDXgQhkN50bp-Z2K5InM_/Y4Nj+fDlt0uaX0xnzOj1AjymTvQ_
+    restorecon_recursive /persist
 
 on post-fs
     mkdir /tombstones/modem 0771 system system
@@ -114,6 +108,7 @@ on post-fs
 
     wait /dev/block/platform/msm_sdcc.1/by-name/pds
     exec /system/bin/mount_pds.sh
+    restorecon_recursive /pds
 
     # Load FIPS kernel module
     exec /system/bin/fips_loader /system/lib/modules
@@ -468,7 +463,7 @@ service ftmipcd /system/bin/ftmipcd
 on property:ro.bootmode=factory
     start ftmipcd
 
-service graphicsd /system/bin/logwrapper /system/bin/graphicsd
+service graphicsd /system/bin/graphicsd
     class main
     user system
     group system log
