--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -107,15 +107,6 @@ on fs
     restorecon /persist/drm/widevine/5dsokxEEDXgQhkN50bp-Z2K5InM_/Y4Nj+fDlt0uaX0xnzOj1AjymTvQ_
 
 on post-fs
-    chmod 755 /system/etc/init.crda.sh
-    chmod 755 /system/etc/init.qcom.bt.sh
-    chmod 755 /system/etc/init.qcom.coex.sh
-    chmod 755 /system/etc/init.qcom.efs.sync.sh
-    chmod 755 /system/etc/init.qcom.mdm_links.sh
-    chmod 755 /system/etc/init.qcom.modem_links.sh
-    chmod 755 /system/etc/init.qcom.post_boot.sh
-    chmod 755 /system/etc/init.qcom.sdio.sh
-
     mkdir /tombstones/modem 0771 system system
     mkdir /tombstones/lpass 0771 system system
     mkdir /tombstones/wcnss 0771 system system
@@ -124,10 +115,11 @@ on post-fs
     wait /dev/block/platform/msm_sdcc.1/by-name/pds
     exec /system/bin/mount_pds.sh
 
-    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system ro remount
-
     # Load FIPS kernel module
     exec /system/bin/fips_loader /system/lib/modules
+
+    # Link thermald
+    symlink /etc/thermald-8960.conf /etc/thermald.conf
 
 # Set default maximum of 1.5 GHz (peformance settings will change this if set by user)
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1512000
